kubernetes/main/apps/kyverno/kyverno/policies/add-safe-to-evict.yaml
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/kyverno.io/clusterpolicy_v1.json
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-safe-to-evict
  annotations:
    policies.kyverno.io/category: Other
    policies.kyverno.io/subject: Pod,Annotation
    policies.kyverno.io/minversion: 1.4.3
    policies.kyverno.io/description: >-
      The Kubernetes cluster autoscaler does not evict pods that
      use hostPath or emptyDir volumes. To allow eviction of these pods, the annotation
      cluster-autoscaler.kubernetes.io/safe-to-evict=true must be added to the pods.
spec:
  rules:
    - name: annotate-empty-dir
      match:
        all:
          - resources:
              kinds: [Pod]
      exclude:
        any:
          - resources:
              annotations:
                kyverno.io/ignore: "true"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(cluster-autoscaler.kubernetes.io/safe-to-evict): "true"
          spec:
            volumes:
              - <(emptyDir): {}
    - name: annotate-host-path
      match:
        all:
          - resources:
              kinds: [Pod]
      exclude:
        any:
          - resources:
              kinds: [Pod]
              annotations:
                kyverno.io/ignore: "true"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(cluster-autoscaler.kubernetes.io/safe-to-evict): "true"
          spec:
            volumes:
              - hostPath:
                  <(path): "*"
